# MLMC

./: .gitignore  LICENSE  MD_sim.conf  ParallelExecution.conf  README.md  pyproject.toml  results_MD.tgz  results_toy.tgz  results_toy_rich.tgz  results_toy_rich_bigstep.tgz  run_all_MD.sh  run_all_toy.sh  run_toy_rich.sh  run_toy_rich_bigstep.sh
Matlab/: compute_D.m  compute_K.m
mlmc/: xp.py
mlmc/Integration_SDE/: EulerMaruyama.py
mlmc/MD_simulations/: EMFactory.py  FilePlotter.py  MLMC_Scatter.py  ScatterFactory.py  run.py
mlmc/MD_simulations/Analysis/: check_times.py  check_times_noMC.py  check_times_noMC_single.py  check_times_single.py  integrity_plot.py  run.py  write_ops.py
mlmc/MLMC/: Factory.py  MC.py  MLMC.py  MLMC_L.py  MLMC_L_Geometric.py
mlmc/ParallelExecution/: ParallelExecutor.py
mlmc/scatter/: __init__.py  scatter.py
mlmc/toy_simulations/: F_double_well.py  MLMC_Toy.py  find_cost.py  pars_estimate.py  run.py
mlmc/toy_simulations/Analysis/: check_times.py  plot_levels.py  write_ops.py
tests/: MLMC_Test.py  test_lj.py  test_mlmc.py  test_scatter.py
